Fixing Magazine Section Image Overlap issue

--- a/wp-content/themes/adviser/style.css
+++ b/wp-content/themes/adviser/style.css
@@ -1440,6 +1440,7 @@ h2.title{
 .home-magazine .latest-issue img {
   max-width: 190px;
   height: auto;
+  width: 100%;
 }
 
 .home-magazine .view-more {
